# autumns-api

./: .gitignore  CMakeLists.txt  README.md  autumn_api.sln  mod.vcxproj  mod.vcxproj.filters
CaveStory/: Changelog.md  Doukutsu.exe.blbkp  arms_level.tbl  bullet.tbl  caret.tbl  new_functions.txt
CaveStory/data/: arms_level.yaml  bullet.yaml  caret.yaml  npc.tbl  stage.tbl
CaveStory/data/Scripts/: ActMyChar.lua  AnimationMyChar.lua  BossAlmo1.lua  BossAlmo2.lua  BossBallos.lua  BossFrog.lua  BossIronH.lua  BossOhm.lua  BossPress.lua  BossTwinD.lua  BossX.lua  Bullet.lua  Caret.lua  DamageMyChar.lua  Escape.lua  Inventory.lua  (+23 more)
CaveStory/mods/: error.txt  mods.txt
CaveStory/savedata/: log.txt  window.rect
ModCS Examples/: ReadMe.md  ReadMe.txt
ModCS Examples/CSE2LE/: ReadMe.txt
ModCS Examples/HUD/: PutActiveArmsList Replacement.lua  PutArmsEnergy Replacement.lua  PutMyAir Replacement.lua  PutMyLife Replacement.lua
ModCS Examples/Menu/: Escape Replacement.lua  Inventory Replacement.lua  MiniMap Replacement.lua
ModCS Examples/Mode Overhaul/: ModeRecreations.lua  readme.md.txt
ModCS Examples/NPCs/: Cave Story Beta Soap.lua  Critter Lua Recreation.lua  Critter Rect Change.lua  Simple Blinking NPC.lua
ModCS Examples/Player/: ActMyChar Replacement.lua  AnimationMyChar Replacement.lua  DamageMyChar Replacement.lua  Player Ironhead Movement Recreation.lua  Player Movement Recreation.lua  PutMyChar Replacement.lua
ModCS Examples/TSC/: FLJ Lua Recreation.lua  FNJ.lua  Flag Range Jump Command FRJ.lua  Trade Item Command TRI.lua
ModCS Examples/Weapons/: Polar Star Recreation.lua
import/: AutPI.cpp  AutPI.h
import/lua/: Lua.cpp  Lua.h
src/: API_Boss.cpp  API_Boss.h  API_Caret.cpp  API_Caret.h  API_Draw.cpp  API_Draw.h  API_Escape.cpp  API_Escape.h  API_Game.cpp  API_Game.h  API_GetTrg.cpp  API_GetTrg.h  API_KeyControl.cpp  API_KeyControl.h  API_LoadGenericData.cpp  API_LoadGenericData.h  API_Main.cpp  API_Main.h  API_ModeAction.cpp  API_ModeAction.h  API_ModeOpening.cpp  API_ModeOpening.h  API_ModeTitle.cpp  API_ModeTitle.h  API_MyChar.cpp  API_MyChar.h  API_Npc.cpp  API_Npc.h  API_NpcTbl.cpp  API_NpcTbl.h  API_Profile.cpp  API_Profile.h  API_PutFPS.cpp  API_PutFPS.h  API_Stage.cpp  API_Stage.h  API_TextScript.cpp  API_TextScript.h  API_Tile.cpp  API_Tile.h  (+20 more)
src/lua/: API_Lua.cpp  API_Lua.h  ArmsItem.cpp  ArmsItem.h  Back.cpp  Back.h  Boss.cpp  Boss.h  Bullet.cpp  Bullet.h  Caret.cpp  Caret.h  Config.cpp  Config.h  Constants.cpp  Constants.h  Draw.cpp  Draw.h  Ending.cpp  Ending.h  Fade.cpp  Fade.h  Flags.cpp  Flags.h  Flash.cpp  Flash.h  Frame.cpp  Frame.h  Game.cpp  Game.h  KeyControl.cpp  KeyControl.h  Lua.cpp  Lua.h  Lua_ArmsItem.cpp  Lua_ArmsItem.h  Lua_Bullet.cpp  Lua_Caret.cpp  Lua_Draw.cpp  Lua_Draw.h  (+56 more)
(+81 files in other folders)
